--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ pytest==8.0.0
 pytest-asyncio==0.23.5
 httpx==0.24.1
 reportlab==4.0.8
-urllib3<2.0.0 
+urllib3<2.0.0
+faiss-cpu==1.7.4
+huggingface-hub==0.19.4 
